2006-02-03  Jan Schmidt  <thaytan@mad.scientist.com>
	* src/htdocs/entities.gst:
	Interesting - these are stable versions, not devel.

2006-02-03  Jan Schmidt  <thaytan@mad.scientist.com>

	* src/htdocs/entities.gst:
	Update version numbers

2006-01-19  Stefan Kost  <ensonic@users.sf.net>

	* HACKING:
	  better description
	* src/htdocs/documentation/index.xml:
	  fix html tables
	* src/html.make:
	  point to correct docs

2006-01-14  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-python/0.8.3.xml:
	  releasing gst-python 0.8.3

2006-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-good/0.10.1.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.1.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	  releasing good and ugly 0.10.1

2005-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xsl:
	  Add link to list unresolved bugs that are not assigned
	  to a real component yet (= "don't know" component).

2005-12-16  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/news/status.xml: Dump.

2005-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xml:
	  Add new column for the 'documentation' component; add
	  0.10.0 and 0.10.1 milestones to all components.

2005-12-05  Thomas Vander Stichele  <thomas (at) apestaart (dot) org>

	* src/htdocs/releases/gst-ffmpeg/0.10.0.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.0.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.0.xml: